This file lists major, incompatible or otherwise important changes, you should look at it after every update.

2014-10-29 The sender for emails now has to be configured (config key is "email_from")
2014-10-19 Postgresl support
2014-09-20 All PHP errors are now converted to exceptions and execution
           terminates if they are not caught. This also works properly
           with display_errors Off/stderr.
2014-08-29 Multipaste support
2014-08-29 Database migrations are no longer done automatically. You now have to run
           `php index.php tools update_database`
2013-09-25 New download driver allowing to switch between php echoing chunks
           (old behaviour and default) and X-Sendfile (635b0717931df907ee8015a42ad0ed1fcdf967c4)
2013-09-25 Switch to bootstrap 3 (9538bea0908c8a3758b41967d977455af731c344)
2013-08-15 Use CI's caching class. The default disables caching, adjust the config (cache_backend) if you want it back.
2013-08-14 Use python-ansi2html instead of HTML::FromANSI