@@ -72,6 +72,7 @@ if ($buf != "0") {
 $mod_groups = array(
 	"thumbnail generation" => array("gd"),
 	"database support" => array("mysql", "mysqli", "pgsql", "pdo_mysql", "pdo_pgsql"),
+	"multipaste tarball support" => array("phar"),
 );
 foreach ($mod_groups as $function => $mods) {
 	$found = 0;
