@@ -1,5 +1,10 @@
 This file lists major, incompatible or otherwise important changes, you should look at it after every update.
 
+2014-11-02 Multipastes can now be downloaded as tarballs. The tarballs are
+           cached and you have to run `php index.php file cron` to clean them up. Calling
+           it more often than once a day is recommended (the example changed to every ten
+           minutes). Also note that the default maximum tarball size is rather low (50MiB),
+           you might want to increase it. Also make sure the phar.so extension is loaded..
 2014-10-29 The sender for emails now has to be configured (config key is "email_from")
 2014-10-19 Postgresl support
 2014-09-20 All PHP errors are now converted to exceptions and execution
